docs/paper-trades/v5/2026-05-04_report.md
# v5 Paper Trading Report -- 2026-05-04

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 14,910 (+1.49%)** |
| Trades | 60 (L:60 S:0) |
| Win Rate | 83% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | LONG | SWING | SUNPHARMA | 1778.70 | 1825.70 | Rs +94 | TARGET |
| 2 | LONG | SWING | NATIONALUM | 395.25 | 409.05 | Rs +897 | TARGET |
| 3 | LONG | SWING | HAL | 4392.00 | 4575.00 | Rs +732 | TARGET |
| 4 | LONG | SWING | NATIONALUM | 395.25 | 408.25 | Rs +338 | TARGET |
| 5 | LONG | SWING | ADANIENSOL | 1355.90 | 1401.60 | Rs +274 | TARGET |
| 6 | LONG | SWING | DIVISLAB | 6548.00 | 6595.00 | Rs +94 | STOPLOSS |
| 7 | LONG | SWING | CHOLAFIN | 1620.20 | 1623.80 | Rs +25 | SIGNAL_FLIP |
| 8 | LONG | SWING | HINDZINC | 610.20 | 606.65 | Rs -43 | SIGNAL_FLIP |
| 9 | LONG | SWING | BANKBARODA | 270.45 | 269.50 | Rs -22 | SIGNAL_FLIP |
| 10 | LONG | SWING | ADANIPOWER | 223.00 | 233.10 | Rs +656 | TARGET |
| 11 | LONG | SWING | ADANIENSOL | 1355.90 | 1413.30 | Rs +517 | TARGET |
| 12 | LONG | SWING | NATIONALUM | 395.25 | 408.00 | Rs +370 | TARGET |
| 13 | LONG | SWING | BHEL | 362.10 | 389.25 | Rs +706 | TARGET |
| 14 | LONG | SWING | KEI | 4854.00 | 4951.10 | Rs +97 | STOPLOSS |
| 15 | LONG | SWING | ADANIENT | 2442.80 | 2484.40 | Rs +166 | STOPLOSS |
| 16 | LONG | SWING | MANKIND | 2259.90 | 2264.30 | Rs +31 | SIGNAL_FLIP |
| 17 | LONG | SWING | ASTRAL | 1560.40 | 1560.20 | Rs -2 | SIGNAL_FLIP |
| 18 | LONG | SWING | ABCAPITAL | 349.55 | 352.50 | Rs +195 | STOPLOSS |
| 19 | LONG | SWING | IRCTC | 546.20 | 551.50 | Rs +122 | STOPLOSS |
| 20 | LONG | SWING | BHEL | 362.10 | 391.20 | Rs +1,018 | TARGET |
| 21 | LONG | SWING | HAL | 4392.00 | 4570.90 | Rs +358 | TARGET |
| 22 | LONG | SWING | ETERNAL | 246.15 | 250.50 | Rs +148 | STOPLOSS |
| 23 | LONG | SWING | GODREJPROP | 1882.00 | 1945.90 | Rs +320 | TARGET |
| 24 | LONG | SWING | HAL | 4392.00 | 4565.00 | Rs +346 | TARGET |
| 25 | LONG | SWING | GODREJPROP | 1882.00 | 1878.70 | Rs -26 | STOPLOSS |
| 26 | LONG | SWING | AMBUJACEM | 443.00 | 447.75 | Rs +185 | STOPLOSS |
| 27 | LONG | SWING | NATIONALUM | 395.25 | 403.90 | Rs +337 | STOPLOSS |
| 28 | LONG | SWING | EXIDEIND | 365.25 | 372.20 | Rs +174 | STOPLOSS |
| 29 | LONG | SWING | PRESTIGE | 1436.70 | 1448.40 | Rs +70 | STOPLOSS |
| 30 | LONG | SWING | BAJFINANCE | 956.30 | 947.90 | Rs -76 | SIGNAL_FLIP |
| 31 | LONG | SWING | ETERNAL | 246.15 | 249.55 | Rs +160 | STOPLOSS |
| 32 | LONG | SWING | HAL | 4392.00 | 4552.50 | Rs +482 | TARGET |
| 33 | LONG | SWING | ADANIENSOL | 1355.90 | 1395.50 | Rs +356 | TARGET |
| 34 | LONG | SWING | MAXHEALTH | 1002.30 | 1010.30 | Rs +64 | STOPLOSS |
| 35 | LONG | SWING | DIVISLAB | 6548.00 | 6591.00 | Rs +43 | STOPLOSS |
| 36 | LONG | SWING | ABCAPITAL | 349.55 | 350.55 | Rs +34 | FLAT_FORCE_EXIT |
| 37 | LONG | SWING | ADANIENT | 2442.80 | 2470.80 | Rs +112 | STOPLOSS |
| 38 | LONG | SWING | APOLLOHOSP | 7745.50 | 7718.00 | Rs -28 | SIGNAL_FLIP |
| 39 | LONG | SWING | LTF | 286.50 | 283.40 | Rs -102 | SIGNAL_FLIP |
| 40 | LONG | SWING | ADANIENSOL | 1355.90 | 1393.60 | Rs +264 | TARGET |
| 41 | LONG | SWING | VMM | 124.61 | 124.59 | Rs -1 | FLAT_FORCE_EXIT |
| 42 | LONG | SWING | COLPAL | 2169.20 | 2162.80 | Rs -19 | FLAT_FORCE_EXIT |
| 43 | LONG | SWING | KEI | 4854.00 | 5044.70 | Rs +572 | TARGET |
| 44 | LONG | SWING | HAL | 4392.00 | 4566.60 | Rs +698 | TARGET |
| 45 | LONG | SWING | NATIONALUM | 395.25 | 406.75 | Rs +426 | TARGET |
| 46 | LONG | SWING | NATIONALUM | 395.25 | 406.75 | Rs +448 | TARGET |
| 47 | LONG | SWING | POLYCAB | 8172.00 | 8335.50 | Rs +164 | TARGET |
| 48 | LONG | SWING | KEI | 4854.00 | 5027.70 | Rs +347 | TARGET |
| 49 | LONG | SWING | HAL | 4392.00 | 4570.00 | Rs +356 | TARGET |
| 50 | LONG | SWING | FORTIS | 946.00 | 952.90 | Rs +124 | STOPLOSS |
| 51 | LONG | SWING | AMBUJACEM | 443.00 | 440.80 | Rs -46 | STOPLOSS |
| 52 | LONG | SWING | RELIANCE | 1442.90 | 1458.60 | Rs +94 | SIGNAL_FLIP |
| 53 | LONG | SWING | MAXHEALTH | 1002.30 | 1010.80 | Rs +119 | SIGNAL_FLIP |
| 54 | LONG | SWING | ABCAPITAL | 349.55 | 352.75 | Rs +109 | SIGNAL_FLIP |
| 55 | LONG | SWING | KEI | 4854.00 | 5053.00 | Rs +597 | TARGET |
| 56 | LONG | SWING | HAL | 4392.00 | 4552.10 | Rs +480 | TARGET |
| 57 | LONG | SWING | ADANIENSOL | 1355.90 | 1395.70 | Rs +438 | TARGET |
| 58 | LONG | SWING | ADANIPORTS | 1697.40 | 1742.90 | Rs +228 | TARGET |
| 59 | LONG | SWING | LAURUSLABS | 1140.00 | 1165.20 | Rs +202 | SIGNAL_FLIP |
| 60 | LONG | SWING | GROWW | 217.22 | 219.90 | Rs +88 | SIGNAL_FLIP |