docs/paper-trades/v6/2026-05-04_report.md
# v5 Paper Trading Report -- 2026-05-04

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 11,587 (+1.16%)** |
| Trades | 45 (L:45 S:0) |
| Win Rate | 84% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | LONG | SWING | NATIONALUM | 395.25 | 410.05 | Rs +962 | TARGET |
| 2 | LONG | SWING | HAL | 4392.00 | 4549.30 | Rs +786 | TARGET |
| 3 | LONG | SWING | NATIONALUM | 395.25 | 409.20 | Rs +363 | TARGET |
| 4 | LONG | SWING | HAL | 4392.00 | 4573.00 | Rs +362 | TARGET |
| 5 | LONG | SWING | ADANIENSOL | 1355.90 | 1396.90 | Rs +246 | TARGET |
| 6 | LONG | SWING | NATIONALUM | 395.25 | 408.00 | Rs +370 | TARGET |
| 7 | LONG | SWING | ADANIENSOL | 1355.90 | 1401.90 | Rs +322 | TARGET |
| 8 | LONG | SWING | ETERNAL | 246.15 | 251.52 | Rs +301 | TARGET |
| 9 | LONG | SWING | ADANIENSOL | 1355.90 | 1411.40 | Rs +388 | TARGET |
| 10 | LONG | SWING | ADANIPOWER | 223.00 | 232.30 | Rs +409 | TARGET |
| 11 | LONG | SWING | PREMIERENE | 1020.20 | 1033.20 | Rs +104 | STOPLOSS |
| 12 | LONG | SWING | ADANIENT | 2442.80 | 2494.80 | Rs +156 | STOPLOSS |
| 13 | LONG | SWING | ABCAPITAL | 349.55 | 352.80 | Rs +195 | STOPLOSS |
| 14 | LONG | SWING | IRCTC | 546.20 | 551.15 | Rs +89 | STOPLOSS |
| 15 | LONG | SWING | BHEL | 362.10 | 391.25 | Rs +729 | TARGET |
| 16 | LONG | SWING | NATIONALUM | 395.25 | 405.60 | Rs +321 | STOPLOSS |
| 17 | LONG | SWING | MANKIND | 2259.90 | 2259.20 | Rs -5 | SIGNAL_FLIP |
| 18 | LONG | SWING | BANKBARODA | 270.45 | 267.20 | Rs -88 | SIGNAL_FLIP |
| 19 | LONG | SWING | KPITTECH | 772.30 | 765.50 | Rs -48 | SIGNAL_FLIP |
| 20 | LONG | SWING | CHOLAFIN | 1620.20 | 1632.00 | Rs +83 | STOPLOSS |
| 21 | LONG | SWING | AMBUJACEM | 443.00 | 448.30 | Rs +164 | STOPLOSS |
| 22 | LONG | SWING | HAL | 4392.00 | 4555.00 | Rs +326 | TARGET |
| 23 | LONG | SWING | GODREJPROP | 1882.00 | 1869.90 | Rs -97 | STOPLOSS |
| 24 | LONG | SWING | PRESTIGE | 1436.70 | 1449.00 | Rs +74 | STOPLOSS |
| 25 | LONG | SWING | GAIL | 166.15 | 165.42 | Rs -49 | SIGNAL_FLIP |
| 26 | LONG | SWING | BAJFINANCE | 956.30 | 948.05 | Rs -82 | SIGNAL_FLIP |
| 27 | LONG | SWING | ETERNAL | 246.15 | 249.50 | Rs +151 | STOPLOSS |
| 28 | LONG | SWING | HAL | 4392.00 | 4553.70 | Rs +485 | TARGET |
| 29 | LONG | SWING | ADANIENSOL | 1355.90 | 1396.00 | Rs +321 | TARGET |
| 30 | LONG | SWING | FORTIS | 946.00 | 951.25 | Rs +100 | STOPLOSS |
| 31 | LONG | SWING | MAXHEALTH | 1002.30 | 1012.80 | Rs +158 | STOPLOSS |
| 32 | LONG | SWING | DIVISLAB | 6548.00 | 6596.00 | Rs +48 | STOPLOSS |
| 33 | LONG | SWING | ASTRAL | 1560.40 | 1548.70 | Rs -105 | SIGNAL_FLIP |
| 34 | LONG | SWING | HAL | 4392.00 | 4554.50 | Rs +488 | TARGET |
| 35 | LONG | SWING | ADANIENSOL | 1355.90 | 1394.00 | Rs +305 | TARGET |
| 36 | LONG | SWING | KEI | 4854.00 | 5044.70 | Rs +572 | TARGET |
| 37 | LONG | SWING | NATIONALUM | 395.25 | 406.75 | Rs +356 | TARGET |
| 38 | LONG | SWING | NATIONALUM | 395.25 | 406.75 | Rs +506 | TARGET |
| 39 | LONG | SWING | POLYCAB | 8172.00 | 8339.00 | Rs +167 | TARGET |
| 40 | LONG | SWING | KEI | 4854.00 | 5025.80 | Rs +344 | TARGET |
| 41 | LONG | SWING | HAL | 4392.00 | 4570.00 | Rs +356 | TARGET |
| 42 | LONG | SWING | FORTIS | 946.00 | 952.95 | Rs +70 | STOPLOSS |
| 43 | LONG | SWING | ABCAPITAL | 349.55 | 352.50 | Rs +83 | SIGNAL_FLIP |
| 44 | LONG | SWING | HAL | 4392.00 | 4553.80 | Rs +485 | TARGET |
| 45 | LONG | SWING | ADANIENSOL | 1355.90 | 1395.70 | Rs +318 | TARGET |